--- a/koreanTowerBingo.html
+++ b/koreanTowerBingo.html
@@ -17,13 +17,41 @@
       flex-direction: column;
       align-items: center;
       justify-content: flex-start;
-      padding-top: 40px;
+      padding-top: 20px;
+      color: white;
+    }
+
+    textarea {
+      width: 80%;
+      max-width: 500px;
+      padding: 10px;
+      margin-bottom: 10px;
+      background: #111;
+      color: white;
+      border: 2px solid #00ccff;
+      border-radius: 6px;
+      resize: vertical;
+    }
+
+    button {
+      padding: 10px 20px;
+      font-size: 16px;
+      font-weight: bold;
+      background-color: #00ccff;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      margin-bottom: 20px;
+    }
+
+    button:hover {
+      background-color: #0099cc;
     }
 
     .bingo-card {
       display: grid;
       grid-template-columns: repeat(5, 1fr);
-      width: 400px;
+      width: 500px;
       aspect-ratio: 1 / 1;
       justify-content: center;
     }
@@ -35,18 +63,15 @@
       justify-content: center;
       background-color: #000000;
       border: 2px solid #00ccff;
-      font-size: 16px;
+      font-size: 14px;
       font-weight: bold;
       padding: 6px;
       text-align: center;
       color: white;
-
       aspect-ratio: 1 / 1;
       width: 100px;
       height: 100px;
-
       word-break: break-word;
-      white-space: normal;
       overflow-wrap: break-word;
       box-sizing: border-box;
       cursor: pointer;
@@ -74,7 +99,7 @@
       background-color: transparent;
       color: white;
       border-color: #00ccff;
-      cursor: default; /* not clickable */
+      cursor: default;
     }
 
     .cell.free::after {
@@ -91,35 +116,44 @@
   </style>
 </head>
 <body>
+  <textarea id="customInput" rows="6" placeholder="Paste bingo spaces here..."></textarea>
+  <button onclick="generateCustomBoard()">Generate Board</button>
+
   <div class="bingo-card" id="bingoCard"></div>
 
   <script>
-    const bingoWords = [
-      "Outside Troll Button", "Unindicated Instakills", "Overused Music", "Copy Paste", "GUI Overdose", 
-      "Cash Grab", "Ending Couch/Bench", "Skippable Outside", "Has Win Badge", "Sword Givers",
-      "Entire Tower is Skippable", "Korean Elevators", "Donation Board", "Visible Building Kit", "Many Unintended Skips",
-      "Horrible Stud Misalignments", "Server Client Objects", "Trul GUI", "Horrible Gameplay", "Actually Good Gameplay",
-      "Massive Difficulty Spikes", "Punishing", "Disappearing Platforms", "Broken Scripts", "Trul Thumbnail",
-      "Pick a Path", "Hacker Infested", "Way Too Short", "Way Too Long", "Player Collision",
-      "Practice Area", "Wallhop Themed", "Teleports to Other Towers", "Empty Tower", "No Creativity",
-      "Confusing", "Quiz", "Claimable Item with Timer", "Really Easy", "Really Hard",
-      "Truls", "Enter VIP Without Buying", "Brainrot", "Slap Tower", "\"Pinning\" in Name",
-      "Game Name Makes No Sense", "Actual Creativity", "NEaT", "Crazy Damage Bricks", "Creative Tower Frame",
-      "Gears Unusable Without Paying", "Final Stretch Over Void", "Description Doesn't Make Sense", "Opaque Cancollide False Section", "Obby For Reward!!!",
-      "Favorite This Game?", "Popular (1K+ Concurrent)", "Gameplay Hugs Walls", "Nothing Burger", "Random Invisible Truss Skips",
-      "Unfinished", "Probably Untested", "Modifies Avatar", "Random Kids Voice Chat", "Admin Abuse",
-      "Overstimulated Ending", "Leaderboard"
+    const defaultWords = [
+      "1", "2", "3", "4", "5", "6", "7", "8", "9", "10", "11", "12", "13", "14", "15", "16", "17", "18", "19", "20", "21", "22", "23", "24"
     ];
 
     function shuffle(array) {
       return array.sort(() => Math.random() - 0.5);
     }
 
-    function generateBingoCard() {
+    function generateCustomBoard() {
+      const input = document.getElementById("customInput").value;
+      let items;
+
+      if (!input.trim()) {
+        items = [...defaultWords];
+      } else {
+        if (input.includes(',')) {
+          items = input.split(',').map(word => word.trim().replace(/^"(.*)"$/, '$1'));
+        } else {
+          items = input.split('\n').map(word => word.trim().replace(/^"(.*)"$/, '$1'));
+        }
+        items = items.filter(item => item.length > 0);
+      }
+
+      if (items.length < 24) {
+        alert("Please enter at least 24 items.");
+        return;
+      }
+
       const container = document.getElementById("bingoCard");
       container.innerHTML = "";
 
-      const shuffled = shuffle([...bingoWords]);
+      const shuffled = shuffle([...items]);
       let index = 0;
 
       for (let i = 0; i < 25; i++) {
@@ -132,10 +166,8 @@
         if (i === 12) {
           textSpan.textContent = "FREE";
           cell.classList.add("free");
-          // No click listener on free cell
         } else {
           textSpan.textContent = shuffled[index++];
-          // Add click toggling only for non-free cells
           cell.addEventListener("click", () => {
             cell.classList.toggle("marked");
           });
@@ -146,7 +178,8 @@
       }
     }
 
-    generateBingoCard();
+    // Automatically generate a default board on load
+    window.onload = generateCustomBoard;
   </script>
 </body>
 </html>
