--- a/koreanTowerBingo.html
+++ b/koreanTowerBingo.html
@@ -131,7 +131,7 @@
       "Pick a Path", "Hacker Infested", "Way Too Short", "Way Too Long", "Player Collision",
       "Practice Area", "Wallhop Themed", "Teleports to Other Towers", "Empty Tower", "No Creativity",
       "Confusing", "Quiz", "Claimable Item with Timer", "Really Easy", "Really Hard",
-      "Truls", "Enter VIP Without Buying", "Brainrot", "Slap Tower", ""Pinning" in Name",
+      "Truls", "Enter VIP Without Buying", "Brainrot", "Slap Tower", "\"Pinning\" in Name",
       "Game Name Makes No Sense", "Actual Creativity", "NEaT", "Crazy Damage Bricks", "Creative Tower Frame",
       "Gears Unusable Without Paying", "Final Stretch Over Void", "Description Doesn't Make Sense", "Opaque Cancollide False Section", "Obby For Reward!!!",
       "Favorite This Game?", "Popular (1K+ Concurrent)", "Gameplay Hugs Walls", "Nothing Burger", "Random Invisible Truss Skips",
